# mtg_scripts

./: .gitignore  README.md  card_trader.js  filter_list.py  pyproject.toml  requirements.txt
build_base_deck/: build_base_deck.py
calculate_to_purchase/: calculate_to_purchase.py
cardmarket_optimizer/: algos.py  buyer.py  cardmarket_optimizer.py  common.py  extract_seller_info_from_offers_db.py  filters.py  gen_dummy_dbs.py  gen_dummy_test_files.py  optimized_shopping_wizard.py  optimizer.py  scraper.py  scraper_filters.py  shopping_wizard_optimizer.py  shopping_wizard_optimizer_filter.py
cardtrader_optimizer/: cardtrader_optimizer.py  diff.py  options_setter_in_browser.js
deck_exporter/: README.md  deck_exporter.py
forge_auto_battler/: forge_auto_battler.py  simulator.py
forge_deck_exporter/: README.md  moxfield_to_forge.py
other_scripts/: count_occurrences.py  filter_list.py
