[project]
name = "mtg_scripts"
version = "0.1.0"
description = "Scripts for Magic: The Gathering utilities"
authors = [{ name = "Tomose" }]
requires-python = ">=3.10"

dependencies = [
    "pyedhrec>=0.0.2",
    "httpx>=0.28.1",
    "selenium>=4.35.0",
    "pywinauto>=0.6.9",
    "tesserocr>=2.8.0",
    "pillow>=11.3.0",
    "requests>=2.32.4",
]
